# supabase-auth-redux

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cobertura.xml  deny.toml  run_tests.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
examples/: local_supabase.rs
src/: delete_user.rs  error.rs  get_user.rs  lib.rs  logout.rs  refresh_token.rs  signin_with_password.rs  signup.rs  util.rs
src/models/: mod.rs  token.rs  user.rs
tests/: README.md  auth_flow_tests.rs  integration_tests.rs  test_helper.rs  unit_tests.rs
